--- a/_posts/2014-07-25-panning.md
+++ b/_posts/2014-07-25-panning.md
@@ -1,31 +1,38 @@
-Ardour: Panning
+---
+layout: post
+title: "Panning"
+description:
+modified: 
+tags: [04 MIXING SESSIONS]
+image:
+  feature: abstract-3.jpg
+  credit: dargadgetz
+  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+---
 
-Panning
-=======
-
-Once you have established a good balance of levels on all the Tracks,
-you can begin to think about **Panning**. Panning helps to establish a
-**Stereo Field**, a relative space between the speakers in which to
+Panning helps to establish a **Stereo Field**, a relative space between the speakers in which to
 place your sounds and instruments.
 
-The Panning Interface
----------------------
+Once you have established a good balance of levels on all the Tracks,
+you can begin to think about panning.
+
+## The Panning Interface
 
 The **Panning** control in Ardour is located in the middle of the mixer
 strip.
 
 A Mono Track will have a Mono Panner. It looks like this:
 
-![](static/Ardour3_Panning_MONO.png)
+![monopan](../images/Ardour3_Panning_MONO.png)
 
 A Stereo Track will have a Stereo Panner, like this:
 
-**![](static/Ardour3_Panning_STEREO.png)
+![stereopan](../images/Ardour3_Panning_STEREO.png)
 
 ### Mono Panner
 
 The default Mono Panner distributes 1 input to 2 outputs. Its behaviour
-is controlled by a single parameter, the position. By default, the
+is controlled by a single parameter, the *position*. By default, the
 panner is centered. You can change the position by clicking and dragging
 directly on the Mono Panner. Right-click on the panner to access other
 options.
@@ -40,27 +47,28 @@ Click and drag either the Left or the Right button to change the
 *width*. For example, if you bring them closer together it will look
 like this:
 
-![](static/Ardour3_Panning_STEREO_WIDTH.png) 
+![stereo width](../images/Ardour3_Panning_STEREO_WIDTH.png) 
 
-With a smaller width, you can also drag the top handle to change the
+With a narrower width, you can also drag the top handle to change the
 relative center position, like this:
 
-![](static/Ardour3_Panning_Stereo_example.png) \
+![stereo panner example](../images/Ardour3_Panning_Stereo_example.png) 
 
 If we make the Left and Right buttons to overlap completely (that is,
 width is reduced to zero), the handles turn into a single signal
 indicator marked "M" (for mono):
 
-![](static/Ardour3_Panning_Stereo_Mono.png) \
+![stereo mono example](../images/Ardour3_Panning_Stereo_Mono.png) 
 
-Panning Techniques and Philosophy
----------------------------------
+## Panning Tricks
 
-As a general rule of thumb, guitars tend to be Panned to the left and
-right. Vocals and bass tend to placed in the center. You want to create
-a balance so that one side is not louder then the other. Headphones may
-be helpful in determining how instruments should be Panned and whether
-one side is too loud and makes the mix feel lopsided.
+A more extensive discussion of panning philosophy and techniques is beyond the scope of this tutorial,
+but here are some general rules of thumb:
+
+* Guitars tend to be Panned to the left and right.
+* Vocals and bass tend to placed in the center. You want to create
+a balance so that one side is not louder then the other.
+* Headphones may be helpful in determining how instruments should be panned, and whether the mix feels lopsided because one side is too loud.
 
 Two other tools that are useful in creating a "spatial" or Stereo Field
 are **Reverb** and **Delay**. These effects can be used together with
@@ -69,15 +77,16 @@ more Reverb, and a vocal send which might have a little more Delay but
 sound closer than the drums. Please see the chapter on **Using Plugins**
 and **Using Sends** for more information.
 
-*Note:* *Always keep an eye on your Levels while Panning Tracks!*
-Panning a Track to one channel increases the Level of that channel. This
+> TIP: Always keep an eye on your Levels while Panning Tracks! Panning
+a Track to one channel increases the Level of that channel. This
 may change the balance of Levels you set up in the previous chapter, and
 in extreme cases can result in Clipping. When this happens, reduce the
 overall Levels of that Track and check again how it sits in the Mix.
 
-Continuing
-----------
+## Continuing
 
 By now, you should have a collection of Tracks which are both Mixed well
 and have an exciting Stereo Image. In the following chapters, we will
 learn about **Using Plugins** to enhance the sound of your Mix.
+
+Next: [USING PLUGINS](../using-plugins)
