--- a/_posts/2014-07-19-dynamics.md
+++ b/_posts/2014-07-19-dynamics.md
@@ -1,18 +1,28 @@
-Dynamics
-========
+---
+layout: post
+title: "Dynamics"
+description:
+modified: 
+tags: [04 MIXING SESSIONS]
+image:
+  feature: abstract-3.jpg
+  credit: dargadgetz
+  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+---
 
 One of the problems you may encounter in a Mix is that the loud parts
-are too loud, but the quiet parts are too quiet. This kind of problem
+are too loud, and/or the quiet parts are too quiet.
+
+This kind of problem
 cannot be easily solved using Faders to adjust the Levels alone. You may
 set the Levels so high that they clip, or you may add unwanted
 background noise by simply turning Levels up. These are all problems
 with what is called the **Dynamic Range**, i.e., the difference between
 the loudest and quietest parts of your Session. There are several types
-of tools for adjusting the Dynamic Range available as **LADSPA Plugins**
+of tools for adjusting the Dynamic Range available as **Plugins**
 within Ardour, including **Limiting**, **Compression** and **Gating**.
 
-Limiting
---------
+## Limiting
 
 A **Limiter** is a tool that prevents the volume of a Track from going
 over a certain Level, usually the Peak Level (0dB) or something close to
@@ -22,14 +32,14 @@ between the loudest and quietest parts of your Mix. A Limiter can be
 used on the Master Bus to prevent the overall Mix from Clipping.
 Limiters are almost always used Post-Fader.
 
-The "*Fast Lookahead Limiter*" can be found among the LADSPA Plugins. To
-set how much the Fast Lookahead Limiter**limits, simply adjust the
+The "*Fast Lookahead Limiter*" can be found among the Plugins. To
+set how much the Fast Lookahead Limiter limits, simply adjust the
 "*Limit (dB)*" slider. The Fast Lookahead Limiter literally "looks
 ahead" in the signal by a few milliseconds, and when it sees that the
 signal is about to go over the limit you have set, it automatically
 turns the Levels down.
 
-![limiter.new](static/Ardour-MixerStrip-limiter-new-en.png "limiter.new")
+![limiter](../images/Ardour3_Limiter_Fast_Lookahead.png)
 
 The "*Input Gain (dB)*" slider determines how much the Levels are
 increased before they reach the Limiter, and the "*Attenuation (dB)*"
@@ -45,8 +55,7 @@ Artifacts of the processing will occur (such as Distortions or erratic
 changes in volume). On the Master Bus, it is generally best to avoid
 excessive Limiting.
 
-Compression
------------
+## Compression
 
 A **Compressor** boosts the overall volume of a sound, but then
 "squeezes" it depending on how loud it is. This can make vocals sound
@@ -55,69 +64,78 @@ how a Limiter can reduce the range between the quietest and the loudest
 sound, however the effect is more selective when using a Compressor.
 
 The simplest Compressor has relatively few controls, such as the
-"*Simple Compressor*" LADSPA Plugin shown below. Here, the "*Threshold*"
+"*Simple Compressor*" Plugin shown below. Here, the "*Threshold*"
 sets the Level at which the Compressor will start to act, and the
 "*Compression Ratio*" controls how much the Compressor will "squeeze"
 the sound. The "*Attack*" and "*Decay*" parameters control how quickly
 the Compressor affects the sound.
 
-![compressor.new](static/Ardour-MixerStrip-compressor-new-en.png "compressor.new")
+![simple compressor](../images/Ardour3_Compressor_Simple.png)
 
-A more complex Compressor, the "*SC1 Compressor*" LADSPA Plugin, can be
-found among the Ardour Plugins, in the "*Steve Harris*" folder.
+A more complex Compressor, the "*SC1 Compressor*" Plugin, is show below.
 
-The SC1 Compressor has three main buttons: "*Threshold level* (dB)",
-"*Ratio* (1:n)" and "*Makeup gain (dB)*". The "Threshold level" sets the
-Level at which Compressor will compress or squeeze the sound. The
-"Ratio" controls how much it will squeeze when it reaches the Threshold.
-The "Makeup gain" boosts the whole signal after the Compression occurs.
-To soften out a vocal, you could set a "Threshold level" of −10dB or so
+![sc1 compressor](../images/Ardour3_Compressor_SC1.png)
+
+It has three main buttons:
+
+* "*Threshold level* (dB)" sets the level at which the Compressor will compress or squeeze the sound.
+
+* "*Ratio* (1:n)" controls how much it will squeeze when it reaches the threshold.
+
+* "*Makeup gain (dB)*" boosts the whole signal after the Compression occurs.
+
+To soften out a vocal, for example, you could set a "Threshold level" of −10dB or so
 and a "Ratio" of 2.5, and then bring the volume back up with the "Makeup
 gain".
 
-![compressor.png](static/Ardour-MixerStrip-compressor-en.png)
-
 The other three controls—"*Attack time (ms)*", "*Release time (ms)*" and
 "*Knee radius (dB)*"—allow you to control the shape of the Compression.
+
 For soft vocal Compression, you would want a semi-fast "Attack time" so
 that the Compressor catches the beginning of each word, a slower
 "Release time" to let the voice ring out, and a soft "Knee radius" to
-create a gentle form of compression that isn't too noticeable. If you
-want to make drums sound big, you might try a slow "Attack time" so that
+create a gentle form of compression that isn't too noticeable.
+
+If you want to make drums sound big, you might try a slow "Attack time" so that
 you don't Compress the pop of the drum, a fast "Release time" so that
 the Compressor can catch the next hit of the drum, and a large "Ratio"
 to make the Dynamics between the beginning and end of the drum hit
 similar.
 
-Gating
-------
+Below is a screenshot of a similar Compressor from the [Calf Plugins Package](http://calf.sourceforge.net/plugins.html):
+
+![sc1 compressor](../images/Ardour3_Compressor_Calf.png)
+
+## Gating
 
 The simplest kind of **Gate** allows a signal to pass through when it is
 over a certain Level, and blocks the signal when it is lower than that.
+
 Gates are often used as a kind of noise reduction. For example, the Gate
 on a microphone channel might only open while the singer is singing,
 preventing other background noises from coming through as well when she
 is not singing. Gated drums are also a very well-known studio production
 trick to make them sound "sharper".
 
-Here, the "*Hard Gate*" LADSPA Plugin displays a single control
+Here, the "*Hard Gate*" Plugin displays a single control
 parameter, the "*Threshold*" at which the Gate will open and let the
 signal through.
 
-![gate](static/Ardour-MixerStrip-gate-en.png "gate")
+![gate](../images/Ardour3_Hard_Gate_Plugin.png)
 
-Other kinds of Gates, such as Steve Harris' "*Gate*" LADSPA Plugin, are
+Other kinds of Gates, such as the Calf Gate Plugin, are
 more complex. They have independent control over how quickly the Gate
-opens (the "*Attack*") and closes (the "*Decay*"), as well as other
+opens (the "*Attack*") and closes (the "*Release*"), as well as other
 parameters quite similar to those described for the SC Compressor above.
 
-![gate2](static/Ardour-MixerStrip-gate2-en.png "gate2")
+![gate2](../images/Ardour3_Gate_Calf.png)
 
-Continuing
-----------
+## Continuing
 
 Now that we've explored some tools for getting the Dynamic Range exactly
 where you want it, it's time to look at adjusting the balance of
 Frequencies present in each individual Track and in your overall Mix. In
-the next chapter, we'll learn how to use the **Equalizer**to do just
+the next chapter, we'll learn how to use the **Equalizer** to do just
 that.
+
+Next: [EQUALIZING](../equalizing)
