--- a/_posts/2014-04-23-credits.md
+++ b/_posts/2014-04-23-credits.md
@@ -1,3 +1,15 @@
+---
+layout: post
+title: "Credits"
+description:
+modified: 
+tags: [07 APPENDICES]
+image:
+  feature: abstract-3.jpg
+  credit: dargadgetz
+  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+---
+
 License
 =======
 
@@ -22,575 +34,618 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 Authors
 -------
 
-*ABOUT THIS MANUAL*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Dave Peticolas 2009\
-Walter Langelaar 2009\
+*ABOUT THIS MANUAL* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009, 2014 
+Dave Peticolas 2009 
+Walter Langelaar 2009 
 
 * * * * *
 
-*ADJUSTING THE RHYTHM OF A REGION*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-David Elwell 2009\
-Thomas Goose 2009\
+*ADJUSTING THE RHYTHM OF A REGION* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+David Elwell 2009 
+Thomas Goose 2009
+Bruno Ruviaro 2014
 
 * * * * *
 
-*ADVANCED LINUX CONFIGURATION*\
-© Derek Holzer 2009, 2010\
-Modifications:\
-adam hyde 2009\
-Chou shoichi 2010\
-Damian Soto 2010\
-David Elwell 2009\
-Derick H. 2009\
-Rob Fell 2009\
-Thomas Goose 2009, 2010\
-Walter Langelaar 2009\
+*ADVANCED LINUX CONFIGURATION* 
+© Derek Holzer 2009, 2010 
+Modifications: 
+adam hyde 2009 
+Chou shoichi 2010 
+Damian Soto 2010 
+David Elwell 2009 
+Derick H. 2009 
+Rob Fell 2009 
+Thomas Goose 2009, 2010 
+Walter Langelaar 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*INSTALLING ARDOUR*\
-© stefan hanser 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Thomas Goose 2009\
-William Abernathy 2009\
+*INSTALLING ARDOUR* 
+© stefan hanser 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Thomas Goose 2009 
+William Abernathy 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*ARRANGING TRACKS*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Dave Peticolas 2009\
-David Elwell 2009\
+*ARRANGING TRACKS* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Dave Peticolas 2009 
+David Elwell 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*CREATING A TRACK OR BUS*\
-© Tomasz Kaye 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Dave Peticolas 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Dick MacInnis 2009\
-Mr Stock 2009\
-Thomas Goose 2009\
-Walter Langelaar 2009\
+*CREATING A TRACK OR BUS* 
+© Tomasz Kaye 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+Dave Peticolas 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Dick MacInnis 2009 
+Mr Stock 2009 
+Thomas Goose 2009 
+Walter Langelaar 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*CREATING LOOPED SECTIONS*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Christian Herzberg 2010\
-Dave Peticolas 2009\
-David Elwell 2009\
-Ross Johnson 2010\
-Thomas Goose 2009\
-Tomasz Kaye 2009\
-Walter Langelaar 2009\
+*CREATING LOOPED SECTIONS* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Christian Herzberg 2010 
+Dave Peticolas 2009 
+David Elwell 2009 
+Ross Johnson 2010 
+Thomas Goose 2009 
+Tomasz Kaye 2009 
+Walter Langelaar 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*CREDITS*\
-© adam hyde 2006, 2007, 2009\
-Modifications:\
-Derek Holzer 2009\
+*CREDITS* 
+© adam hyde 2006, 2007, 2009 
+Modifications: 
+Derek Holzer 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*DYNAMICS*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Christian Herzberg 2010\
-jon cohrs 2009\
+*DYNAMICS* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+Christian Herzberg 2010 
+jon cohrs 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*CHANGING EDIT MODES*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Dave Peticolas 2009\
-Malcolm Smith 2010\
-Thomas Goose 2009\
+*CHANGING EDIT MODES* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Dave Peticolas 2009 
+Malcolm Smith 2010 
+Thomas Goose 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*EQUALIZING*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-jon cohrs 2009\
-Malcolm Smith 2010\
+*EQUALIZING* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+jon cohrs 2009 
+Malcolm Smith 2010 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*EXPORTING A RANGE*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-David Elwell 2009\
-stefan hanser 2009\
-Thomas Goose 2009\
+*EXPORTING A RANGE* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+David Elwell 2009 
+stefan hanser 2009 
+Thomas Goose 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*EXPORTING A REGION*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Dave Peticolas 2009\
-David Elwell 2009\
-stefan hanser 2009\
+*EXPORTING A REGION* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Dave Peticolas 2009 
+David Elwell 2009 
+stefan hanser 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*EXPORTING A SESSION*\
-© Derek Holzer 2009\
-Modifications:\
-Dave Peticolas 2009\
-David Elwell 2009\
-jon cohrs 2009\
-Thomas Goose 2009\
-Walter Langelaar 2009\
+*EXPORTING A SESSION* 
+© Derek Holzer 2009 
+Modifications: 
+Dave Peticolas 2009 
+David Elwell 2009 
+jon cohrs 2009 
+Thomas Goose 2009 
+Walter Langelaar 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*GLOSSARY*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Malcolm Smith 2010\
-Thomas Goose 2009\
+*GLOSSARY* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+Malcolm Smith 2010 
+Thomas Goose 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*IMPORTING AUDIO*\
-© Tomasz Kaye 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Dave Peticolas 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Dick MacInnis 2009\
-Thomas Goose 2009\
+*IMPORTING AUDIO* 
+© Tomasz Kaye 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+Dave Peticolas 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Dick MacInnis 2009 
+Thomas Goose 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*INSTALLING JACKOSX*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Claudia Borges 2009\
-David Elwell 2009\
-Thomas Goose 2009\
+*INSTALLING JACKOSX* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+Claudia Borges 2009 
+David Elwell 2009 
+Thomas Goose 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*AN OVERVIEW OF THE INTERFACE*\
-© Bruno Ruviaro 2009\
-Modifications:\
-adam hyde 2009\
-Christian Herzberg 2010\
-David Elwell 2009\
-Derek Holzer 2009\
-Dick MacInnis 2009\
-Ma Rk 2009\
+*AN OVERVIEW OF THE INTERFACE* 
+© Bruno Ruviaro 2009 
+Modifications: 
+adam hyde 2009 
+Christian Herzberg 2010 
+David Elwell 2009 
+Derek Holzer 2009 
+Dick MacInnis 2009 
+Ma Rk 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*INTRODUCTION*\
-© adam hyde 2006, 2007, 2009\
-Modifications:\
-Al Thompson 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-jay maechtlen 2009\
-Rob Fell 2009\
+*INTRODUCTION* 
+© adam hyde 2006, 2007, 2009 
+Modifications: 
+Al Thompson 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+jay maechtlen 2009 
+Rob Fell 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*LINKS*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Derick H. 2009\
-Giorgio Moscardi 2010\
-Thomas Goose 2009\
+*LINKS* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Derick H. 2009 
+Giorgio Moscardi 2010 
+Thomas Goose 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*OTHER LINUX*\
-© Walter Langelaar 2009\
-Modifications:\
-adam hyde 2009\
-Derek Holzer 2009\
-Derick H. 2009\
-Thomas Goose 2009\
-William Abernathy 2009\
+*OTHER LINUX* 
+© Walter Langelaar 2009 
+Modifications: 
+adam hyde 2009 
+Derek Holzer 2009 
+Derick H. 2009 
+Thomas Goose 2009 
+William Abernathy 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*MIXING LEVELS*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Dave Peticolas 2009\
-David Elwell 2009\
-jon cohrs 2009\
-Thomas Goose 2009\
+*MIXING LEVELS* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Dave Peticolas 2009 
+David Elwell 2009 
+jon cohrs 2009 
+Thomas Goose 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*MOVING AUTOMATION*\
-© Derek Holzer 2009, 2010\
-Modifications:\
-Ben Loftis 2010\
-Christian Herzberg 2010\
-Thomas Goose 2009\
+*MOVING AUTOMATION* 
+© Derek Holzer 2009, 2010 
+Modifications: 
+Ben Loftis 2010 
+Christian Herzberg 2010 
+Thomas Goose 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*PANNING*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Christian Herzberg 2010\
-Giorgio Moscardi 2010\
-jon cohrs 2009\
+*PANNING* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Christian Herzberg 2010 
+Giorgio Moscardi 2010 
+jon cohrs 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*RECORDING AUDIO*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Christopher Stamper 2009\
-Dave Peticolas 2009\
-David Elwell 2009\
-Mr Stock 2009\
-Thomas Goose 2009\
-Walter Langelaar 2009\
+*RECORDING AUDIO* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+Christopher Stamper 2009 
+Dave Peticolas 2009 
+David Elwell 2009 
+Mr Stock 2009 
+Thomas Goose 2009 
+Walter Langelaar 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*FURTHER REGION OPERATIONS*\
-© Tomasz Kaye 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Dave Peticolas 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Malcolm Smith 2010\
-Thomas Margolf 2009\
+*FURTHER REGION OPERATIONS* 
+© Tomasz Kaye 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+Dave Peticolas 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Malcolm Smith 2010 
+Thomas Margolf 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*ROUTING BETWEEN JACK APPLICATIONS*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Dave Peticolas 2009\
+*ROUTING BETWEEN JACK APPLICATIONS* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Dave Peticolas 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*SAVING A SESSION*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Dave Peticolas 2009\
-David Elwell 2009\
-Thomas Goose 2009\
-Walter Langelaar 2009\
+*SAVING A SESSION* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Dave Peticolas 2009 
+David Elwell 2009 
+Thomas Goose 2009 
+Walter Langelaar 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*SAVING A SNAPSHOT*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Dave Peticolas 2009\
-Thomas Goose 2009\
-Walter Langelaar 2009\
+*SAVING A SNAPSHOT* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+Dave Peticolas 2009 
+Thomas Goose 2009 
+Walter Langelaar 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*SAVING A TEMPLATE*\
-© Derek Holzer 2009\
-Modifications:\
-David Elwell 2009\
-Walter Langelaar 2009\
+*SAVING A TEMPLATE* 
+© Derek Holzer 2009 
+Modifications: 
+David Elwell 2009 
+Walter Langelaar 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*SETTING UP THE METER*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-David Elwell 2009\
+*SETTING UP THE METER* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+David Elwell 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*SETTING UP THE TIMELINE*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-David Elwell 2009\
+*SETTING UP THE TIMELINE* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+David Elwell 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*FURTHER HELP*\
-© Derick H. 2009\
-Modifications:\
-adam hyde 2009\
-Derek Holzer 2009\
+*FURTHER HELP* 
+© Derick H. 2009 
+Modifications: 
+adam hyde 2009 
+Derek Holzer 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*STARTING ARDOUR ON OSX*\
-© stefan hanser 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Christopher Stamper 2009\
-Claudia Borges 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Thomas Goose 2009\
+*STARTING ARDOUR ON OSX* 
+© stefan hanser 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+Christopher Stamper 2009 
+Claudia Borges 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Thomas Goose 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*STARTING ARDOUR ON UBUNTU*\
-© Walter Langelaar 2009\
-Modifications:\
-adam hyde 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Mark Lindhout 2009\
-Thomas Goose 2009\
+*STARTING ARDOUR ON UBUNTU* 
+© Walter Langelaar 2009 
+Modifications: 
+adam hyde 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Mark Lindhout 2009 
+Thomas Goose 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*STARTING JACKOSX*\
-© stefan hanser 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Mr Stock 2009\
-Thomas Goose 2009\
+*STARTING JACKOSX* 
+© stefan hanser 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Mr Stock 2009 
+Thomas Goose 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*STARTING JACK ON UBUNTU*\
-© Walter Langelaar 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Derick H. 2009\
-Thomas Goose 2009\
+*STARTING JACK ON UBUNTU* 
+© Walter Langelaar 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Derick H. 2009 
+Thomas Goose 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*STARTING A SESSION*\
-© Claudia Borges 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Christopher Stamper 2009\
-Dave Peticolas 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Mark Lindhout 2009\
-Mr Stock 2009\
-Thomas Goose 2009\
-Walter Langelaar 2009\
+*STARTING A SESSION* 
+© Claudia Borges 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+Christopher Stamper 2009 
+Dave Peticolas 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Mark Lindhout 2009 
+Mr Stock 2009 
+Thomas Goose 2009 
+Walter Langelaar 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*POWERBOOKS & MACBOOKS*\
-© stefan hanser 2009\
-Modifications:\
-adam hyde 2009\
-Derek Holzer 2009\
-Mr Stock 2009\
-Thomas Goose 2009\
-William Abernathy 2009\
+*POWERBOOKS & MACBOOKS* 
+© stefan hanser 2009 
+Modifications: 
+adam hyde 2009 
+Derek Holzer 2009 
+Mr Stock 2009 
+Thomas Goose 2009 
+William Abernathy 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*STRETCHING / SHRINKING REGIONS*\
-© Tomasz Kaye 2009\
-Modifications:\
-adam hyde 2009\
-Christian Herzberg 2010\
-Dave Peticolas 2009\
-David Elwell 2009\
-Derek Holzer 2009\
+*STRETCHING / SHRINKING REGIONS* 
+© Tomasz Kaye 2009 
+Modifications: 
+adam hyde 2009 
+Christian Herzberg 2010 
+Dave Peticolas 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*UBUNTU*\
-© adam hyde 2007, 2008\
-Modifications:\
-Janet Swisher 2008\
-Matteo Cortese 2008\
+*UBUNTU* 
+© adam hyde 2007, 2008 
+Modifications: 
+Janet Swisher 2008 
+Matteo Cortese 2008 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*UNDERSTANDING ROUTING*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-David Elwell 2009\
-Malcolm Smith 2010\
-Mr Stock 2009\
-Rob Fell 2009\
-Thomas Goose 2009\
-Tomasz Kaye 2009\
+*UNDERSTANDING ROUTING* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+David Elwell 2009 
+Malcolm Smith 2010 
+Mr Stock 2009 
+Rob Fell 2009 
+Thomas Goose 2009 
+Tomasz Kaye 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*USING AUTOMATION*\
-© Tomasz Kaye 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Christian Herzberg 2010\
-David Elwell 2009\
-Derek Holzer 2009\
-Mark Lindhout 2009\
-Peter Lutek 2009\
-stefan hanser 2009\
-Thomas Goose 2009\
-Thomas Margolf 2009\
+*USING AUTOMATION* 
+© Tomasz Kaye 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+Christian Herzberg 2010 
+David Elwell 2009 
+Derek Holzer 2009 
+Mark Lindhout 2009 
+Peter Lutek 2009 
+stefan hanser 2009 
+Thomas Goose 2009 
+Thomas Margolf 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*USING THE MIXER STRIP*\
-© stefan hanser 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Giorgio Moscardi 2010\
-Joern Nettingsmeier 2009\
-Mr Stock 2009\
-Walter Langelaar 2009\
+*USING THE MIXER STRIP* 
+© stefan hanser 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Giorgio Moscardi 2010 
+Joern Nettingsmeier 2009 
+Mr Stock 2009 
+Walter Langelaar 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*USING PLUGINS*\
-© stefan hanser 2009\
-Modifications:\
-adam hyde 2009\
-Christian Herzberg 2010\
-Christopher Stamper 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Derick H. 2009\
-Malcolm Smith 2010\
-Mr Stock 2009\
-Thomas Goose 2009\
-William Abernathy 2009\
+*USING PLUGINS* 
+© stefan hanser 2009 
+Modifications: 
+adam hyde 2009 
+Christian Herzberg 2010 
+Christopher Stamper 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Derick H. 2009 
+Malcolm Smith 2010 
+Mr Stock 2009 
+Thomas Goose 2009 
+William Abernathy 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*USING RANGES*\
-© Tomasz Kaye 2009\
-Modifications:\
-adam hyde 2009\
-Dave Peticolas 2009\
-Derek Holzer 2009\
-Thomas Margolf 2009\
+*USING RANGES* 
+© Tomasz Kaye 2009 
+Modifications: 
+adam hyde 2009 
+Dave Peticolas 2009 
+Derek Holzer 2009 
+Thomas Margolf 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*USING SENDS*\
-© Mr Stock 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Thomas Goose 2009\
-Tomasz Kaye 2009\
-William Abernathy 2009\
+*USING SENDS* 
+© Mr Stock 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Thomas Goose 2009 
+Tomasz Kaye 2009 
+William Abernathy 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*WHAT IS DIGITAL AUDIO?*\
-© Derek Holzer 2009\
-Modifications:\
-adam hyde 2009\
-Al Thompson 2009\
-Bruno Ruviaro 2009\
-Christian Herzberg 2010\
-David Elwell 2009\
-Ma Rk 2009\
-Thomas Goose 2009\
-Tomasz Kaye 2009\
+*WHAT IS DIGITAL AUDIO?* 
+© Derek Holzer 2009 
+Modifications: 
+adam hyde 2009 
+Al Thompson 2009 
+Bruno Ruviaro 2009 
+Christian Herzberg 2010 
+David Elwell 2009 
+Ma Rk 2009 
+Thomas Goose 2009 
+Tomasz Kaye 2009 
+Bruno Ruviaro 2014
 
 * * * * *
 
-*WORKING WITH REGIONS*\
-© Walter Langelaar 2009\
-Modifications:\
-adam hyde 2009\
-Bruno Ruviaro 2009\
-Christian Herzberg 2010\
-Dave Peticolas 2009\
-David Elwell 2009\
-Derek Holzer 2009\
-Rob Fell 2009\
-Thomas Margolf 2009\
+*WORKING WITH REGIONS* 
+© Walter Langelaar 2009 
+Modifications: 
+adam hyde 2009 
+Bruno Ruviaro 2009 
+Christian Herzberg 2010 
+Dave Peticolas 2009 
+David Elwell 2009 
+Derek Holzer 2009 
+Rob Fell 2009 
+Thomas Margolf 2009 
+Bruno Ruviaro 2014
 
 * * * * *
-
-[![100.gif](static/Floss-100-en.gif)](http://www.flossmanuals.net/) \
-****
-
-~Free\\ manuals\\ for\\ free\\ software~
 
 General Public License
 ----------------------
 
 Version 2, June 1991
 
-Copyright (C) 1989, 1991 Free Software Foundation, Inc. \
-51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA \
-\
-Everyone is permitted to copy and distribute verbatim copies \
-of this license document, but changing it is not allowed. \
+Copyright (C) 1989, 1991 Free Software Foundation, Inc. 
+51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA 
+ 
+Everyone is permitted to copy and distribute verbatim copies 
+of this license document, but changing it is not allowed. 
 
 **Preamble**
 
@@ -675,19 +730,19 @@ of it, thus forming a work based on the Program, and copy and distribute
 such modifications or work under the terms of Section 1 above, provided
 that you also meet all of these conditions:
 
-\
+ 
 
 **a)** You must cause the modified files to carry prominent notices
 stating that you changed the files and the date of any change.
 
-\
+ 
 
 **b)** You must cause any work that you distribute or publish, that in
 whole or in part contains or is derived from the Program or any part
 thereof, to be licensed as a whole at no charge to all third parties
 under the terms of this License.
 
-\
+ 
 
 **c)** If the modified program normally reads commands interactively
 when run, you must cause it, when started running for such interactive
@@ -724,13 +779,13 @@ scope of this License.
 under Section 2) in object code or executable form under the terms of
 Sections 1 and 2 above provided that you also do one of the following:
 
-\
+ 
 
 **a)** Accompany it with the complete corresponding machine-readable
 source code, which must be distributed under the terms of Sections 1 and
 2 above on a medium customarily used for software interchange; or,
 
-\
+ 
 
 **b)** Accompany it with a written offer, valid for at least three
 years, to give any third party, for a charge no more than your cost of
@@ -739,7 +794,7 @@ copy of the corresponding source code, to be distributed under the terms
 of Sections 1 and 2 above on a medium customarily used for software
 interchange; or,
 
-\
+ 
 
 **c)** Accompany it with the information you received as to the offer to
 distribute corresponding source code. (This alternative is allowed only
@@ -872,5 +927,9 @@ THE PROGRAM TO OPERATE WITH ANY OTHER PROGRAMS), EVEN IF SUCH HOLDER OR
 OTHER PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
 
 **END OF TERMS AND CONDITIONS**
+
+[FURTHER HELP](../further-help)   ||
+[GLOSSARY](../glossary)   ||
+[LINKS](../links)
 
 
