--- a/_posts/2014-04-25-links.md
+++ b/_posts/2014-04-25-links.md
@@ -1,37 +1,36 @@
-Links
-=====
+---
+layout: post
+title: "Links"
+description:
+modified: 
+tags: [07 APPENDICES]
+image:
+  feature: abstract-3.jpg
+  credit: dargadgetz
+  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+---
 
-Ardour: [](http://ardour.org/)
-------------------------------
+Useful links:
 
+#### Ardour:
 [http://ardour.org/](http://ardour.org/)
 
-Ardour reference manual (in progress):
---------------------------------------
+#### Ardour reference manual (in progress):
+[http://manual.ardour.org/](http://manual.ardour.org/)
 
-[http://vm-nice.stackingdwarves.net:8888/ardour-en/1-ARDOUR.html](http://vm-nice.stackingdwarves.net:8888/ardour-en/1-ARDOUR.html)
-
-Ardour video tutorials (including JACK setup):
-----------------------------------------------
-
-[http://vimeo.com/2867399](http://vimeo.com/2867399%20)
-
-Jack Audio Connection Kit
--------------------------
-
+#### Jack Audio Connection Kit
 [http://jackaudio.org/](http://jackaudio.org/)
 
-Jack OS X
----------
-
+#### Jack OS X
 [http://jackosx.com/](http://jackosx.com/)
 
-JAMin
------
-
+#### JAMin
 [http://jamin.sourceforge.net/](http://jamin.sourceforge.net/)
 
-Tutorial: Mastering with JAMin and Ardour
------------------------------------------
-
+#### Tutorial: Mastering with JAMin and Ardour
 [http://jamin.sourceforge.net/en/tutorial.html](http://jamin.sourceforge.net/en/tutorial.html)
+
+**Appendices:**
+[FURTHER HELP](../further-help)   ||
+[GLOSSARY](../glossary)   ||
+[CREDITS](../credits)
