--- a/_posts/2014-04-27-glossary.md
+++ b/_posts/2014-04-27-glossary.md
@@ -1,7 +1,18 @@
-Glossary
-========
+---
+layout: post
+title: "Glossary"
+description:
+modified: 
+tags: [07 APPENDICES]
+image:
+  feature: abstract-3.jpg
+  credit: dargadgetz
+  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+---
 
-**Aggregate Device**(Mac OS X)****
+This glossary offers brief definitions for many or the terms used throuhout the Ardour3 FLOSS Tutorial.
+
+**Aggregate Device** (Mac OS X)****
 
 An Aggregate Device is one virtual soundcard made of of two or more
 physical soundcards. PowerBooks and MacBooks made in 2007 or later will
@@ -14,7 +25,7 @@ A sound file format developed by Apple and commonly used for lossless
 and uncompressed audio. AIFF files are compatible with Windows,
 Macintosh and Linux operating systems.
 
-**ALSA**(Linux)
+**ALSA** (Linux)
 
 Advanced Linux Sound Architecture. ALSA provides audio and MIDI
 functionality to the Linux operating system.
@@ -25,7 +36,7 @@ Action that makes Ardour ready to start recording. Before recording in
 Ardour, one or more tracks need to be armed first, and then Ardour needs
 to be armed itself.
 
-**Artefacts** (sound)
+**Artifacts** (sound)
 
 Perceivable distortion or decrease in sound quality generated as a
 by-product of certain signal processing operations. Artefacts are
@@ -35,7 +46,7 @@ intentional sound transformation.
 **Attenuation**
 
 Reducing the **level**of an audio signal, usually measured using a
-**logarithmic** scale. See also **gain**. \
+**logarithmic** scale. See also **gain**. 
 
 **Audio MIDI Setup** (Mac OS X)
 
@@ -106,7 +117,7 @@ example, "quarter note equals 60", meaning one quarter note per second).
 **Bit**
 
 A bit (**bi**nary dig**it**) is a single number with a value of either 0
-or 1. \
+or 1. 
 
 **Bit Depth**
 
@@ -118,7 +129,7 @@ range**. Studio recordings are usually first made recorded with a bit
 depth of 24 (or even 32) to preserve as much detail before transfer to
 CD. DVDs are made at 24 bit, while video games from the 1980s remain
 famous for their distinctively rough "8 bit sound". Bit depth is also
-referred to as **word length**. \
+referred to as **word length**. 
 
 **Buffer Size**(JACK)
 
@@ -137,7 +148,7 @@ the common input (mic) and output (headphone) connections.
 
 **Bus**
 
-****A bus is similar to a **Track** except that it does not contain its
+A bus is similar to a **Track** except that it does not contain its
 own regions. You cannot record directly into a bus or drag regions into
 it. The Mixer Strip vertically represents the signal flow of a bus,
 whereas the Main Canvas horizontally displays time-based information for
@@ -167,7 +178,7 @@ In some EQ plugins, the user has the possibility of choosing the center
 frequency for each of the Frequency Bands. The center frequency of a
 Band will be the one most sharply attenuated or reinforced by the
 equalizer for that specific band. Frequencies surrounding the center
-frequency will be less affected. \
+frequency will be less affected. 
 
 **Click** (Mouse)
 
@@ -180,12 +191,11 @@ referred to as "right-click".
 Clipping occurs when a signal is too high in level to be reproduced. Any
 samples too high in level will simply be truncated, resulting in
 **distortion**, loss of audio detail, and artefact **frequencies** which
-were not present in the original sound.**\
-**
+were not present in the original sound.
 
 **Clipping Point**
 
-The clipping point of a digital system is referred to as 0 dB****, and
+The clipping point of a digital system is referred to as 0 dB, and
 the level of any sound is measured in how far below the clipping point
 it is (-10 dB, -24 dB, etc).
 
@@ -204,14 +214,14 @@ you download a disk image for Mac OS X or a software package from your
 distribution (such as Ubuntu, Debian or Fedora), it has been compiled
 for you already. However, if you wish to add features (such as support
 for **VST Plugins**) which your distribution does not provide, then you
-must Compile the application from source code yourself. \
+must Compile the application from source code yourself. 
 
 **Compression**(DSP)
 
 Essentially, compression makes the quiet parts of a signal louder
-without changing the level of \
+without changing the level of 
 the louder parts. This entails a reduction of the actual dynamic range:
-a compressed sound is less dynamic (has a smaller range of levels) \
+a compressed sound is less dynamic (has a smaller range of levels) 
 
 **Compression** (data)
 
@@ -221,7 +231,7 @@ of audio files compared to WAV or AIFF without changing the data, which
 is referred to as lossless compression. Audio can be compressed to a
 still smaller size by using lossy compression such as MP3, Ogg Vorbis or
 AAC but this is achieved by removing data which can have an audible
-effect. \
+effect. 
 
 **Connections Manager**(JACK)
 
@@ -245,7 +255,7 @@ Regions.
 Decibel is a logarithmic scale used to measure many quantities,
 including the **gain**, **level** or **loudness** of a signal. Decibel
 is usually abbreviated to dB and in digital audio usually denotes how
-far under 0 dBFS (the **clipping** point of a system) a signal is. \
+far under 0 dBFS (the **clipping** point of a system) a signal is. 
 
 **Delay**(effect)
 
@@ -259,7 +269,7 @@ result.
 **Destructive Editing/Recording**
 
 Destructive actions are those that permanently modify or erase the
-original data (sound files) in the course of editing or recording. \
+original data (sound files) in the course of editing or recording. 
 
 **Distortion**
 
@@ -277,7 +287,7 @@ structure representing a data storage medium or device. By
 double-clicking on a .dmg file on a Mac, a virtual device will be
 mounted to your Desktop (it will look as if you had inserted a USB
 device or a DVD, for example). Many software installers in OS X are
-available as .dmg files. \
+available as .dmg files. 
 
 **Driver**(JACK)
 
@@ -295,7 +305,7 @@ sound that can possibly recorded, as well as the amount of detail which
 can be heard in between those extremes. Sounds which are too quiet to be
 recorded are said to be below the **noise floor**of the recording system
 (microphone, recorder, sound card, audio software, etc). Sounds which
-are too loud will be **distorted**or **clipped**. \
+are too loud will be **distorted**or **clipped**. 
 
 **Edit** **Modes**
 
@@ -329,7 +339,7 @@ sound according to a chosen artistic goal.
 
 **Filter**
 
-A type of signal processing that supresses some frequencies. \
+A type of signal processing that supresses some frequencies. 
 
 **Floating Point Numbers**
 
@@ -341,7 +351,7 @@ integer and non-integer values.
 
 An open source lossless audio format generally compatible with Linux,
 Windows and Macintosh. Unlike AIFF and WAV, FLAC is a compressed format,
-allowing file sizes to be reduced. \
+allowing file sizes to be reduced. 
 
 **FLOSS**
 
@@ -354,7 +364,7 @@ and many others.
 **Format** (audio file)
 
 The types of sound file that sounds are saved as. Among the most common
-are AIFF, WAV, FLAC, mp3 and Ogg Vorbis. \
+are AIFF, WAV, FLAC, mp3 and Ogg Vorbis. 
 
 **fps**
 
@@ -362,7 +372,7 @@ Frames Per Second. Frame rate, or frame frequency is the frequency
 (rate) at which an imaging device produces unique consecutive images
 called frames. The term applies equally well to computer graphics, video
 cameras, film cameras, and motion capture systems. Frame rate is most
-often expressed in frames per second (FPS). \
+often expressed in frames per second (FPS). 
 
 **Frequency**
 
@@ -380,20 +390,20 @@ Increasing the **level**of an audio signal, usually measured using a
 **Grid**
 
 The Grid is a system of points that a Region might snap to while editing
-it. The Grid can be "No Grid", "Grid" or "Magnetic". \
+it. The Grid can be "No Grid", "Grid" or "Magnetic". 
 
 **** **Grid Points**
 
 The points in the **Grid** which Regions will snap to when it is active.
 Grid Points may be minutes, seconds, video frames, bars, beats or some
-multiple of beats. \
+multiple of beats. 
 
 **Hertz**
 
 A term used to describe the number of times something occurs in one
 second. In digital audio, it is used to describe the **sampling rate**,
 and in acoustics it is used to describe the **frequency** of a sound.
-Thousands of Herz are described as kHz (kilo Herz). \
+Thousands of Herz are described as kHz (kilo Herz). 
 
 **High Shelf**
 
@@ -417,21 +427,21 @@ Linux or JackOSX before you can use Ardour.
 **JackOSX** (OS X)
 
 The name of the version of **JACK** that runs on Mac OS X. See **JACK**
-for more details. \
+for more details. 
 
 **JackPilot**
 
-The control interface that comes with JackOSX. \
+The control interface that comes with JackOSX. 
 
 **Jack Server**
 
 The Jack Server is the "engine" or "backend" of the Jack Audio
-Connection Kit. \
+Connection Kit. 
 
 **Jack Router**
 
 The Jack Router allows audio to be routed from one application to
-another using the **Jack Server**. \
+another using the **Jack Server**. 
 
 **JAMin**
 
@@ -469,7 +479,7 @@ The strength of an audio signal. The scale of amplitude is
 **logarithmic**, since it expresses the physical ratio of power between
 one sound and another. Levels in digital audio systems are usually
 represented as the number of Decibels below the clipping point of 0 dB.
-See also **loudness**. \
+See also **loudness**. 
 
 **Limiting**
 
@@ -491,7 +501,7 @@ logarithmic.
 
 The core of the GNU/Linux operating system. In a **Real-time System**,
 this kernel is usually **Compiled**with new parameters which speed up
-the use of audio applications in the system. \
+the use of audio applications in the system. 
 
 **Lock Edit**
 
@@ -507,7 +517,7 @@ as exponentially (2, 4, 8, 16, 256...). Both scales of **pitch** and
 
 **Lossless**
 
-See **Compression** (data) \
+See **Compression** (data) 
 
 **Lossy**
 
@@ -520,7 +530,7 @@ loudness is the perceived strength of a sound. Tones at different
 frequencies may be perceived as being at different loudnesses, even if
 they are at the same amplitude.
 
-**LV2** \
+**LV2** 
 
 LV2 is an open standard for plugins and matching host applications,
 mainly targeted at audio processing and generation. LV2 is a simple but
@@ -542,11 +552,11 @@ Master out use is enabled by default, and the master out bus is set up
 to be stereo. **\
 **
 
-**Meter \
+**Meter 
 **
 
 The grouping of strong and weak beats into larger units called bars or
-measures. \
+measures. 
 
 **Mixing**
 
@@ -554,7 +564,7 @@ Audio mixing is the process by which a multitude of recorded sounds are
 combined into one or more channels, most commonly two-channel stereo. In
 the process, the levels, frequency content, dynamics and panoramic
 position of the source signals are commonly manipulated and effects such
-as reverb may be added. \
+as reverb may be added. 
 
 **MIDI**
 
@@ -574,7 +584,7 @@ Each track and bus is represented in the Mixer Window by a vertical
 Mixer Strip** that contains various controls related to signal flow.
 There are two places in Ardour in which you can see mixer strips. The
 mixer window is the obvious one, but you can also view a single mixer
-strip on the left hand side of the Editor (shift + E to hide/view) \
+strip on the left hand side of the Editor (shift + E to hide/view) 
 
 **Mixer Window**
 
@@ -596,16 +606,16 @@ together with other signals and with any kind of sound processing added.
 **Mono**
 
 A mono sound file contains only one channel of audio. A mono track in
-Ardour has only one input and handles mono sound files. \
+Ardour has only one input and handles mono sound files. 
 
 **MP3**
 
-A lossy, size-compressed sound file **Format**. \
+A lossy, size-compressed sound file **Format**. 
 
 **Graphic Equalizer/Multi-Band Equalizer**
 
 A Graphic (or Multi-Band) Equalizer consists of a bank of sliders for
-boosting or attenuating different frequency of a sound. \
+boosting or attenuating different frequency of a sound. 
 
 **Non-destructive Editing/Recording**
 
@@ -614,7 +624,7 @@ the course of editing. Behind the scenes, the original sound file is
 kept intact, and your edits are in fact a list of instructions that
 Ardour will use in order to reconstruct the signal from the original
 source when you play it back. For example, creating fade-ins and
-fade-outs on your Regions is a type of non-destructive editing. \
+fade-outs on your Regions is a type of non-destructive editing. 
 
 **Normalize**
 
@@ -623,45 +633,45 @@ peaks at the maximum the sound card allows before **Clipping**.
 
 **Normal Mode**
 
-****See **Track Mode**. \
+****See **Track Mode**. 
 
 **Note value**
 
 The proportional duration of a note or rest in relation to a standard
 unit. For instance, a 'quarter note' (crotchet) is so-called because its
-relative duration is one quarter of a whole note (semibreve). \
+relative duration is one quarter of a whole note (semibreve). 
 
-**Octave** (music) \
+**Octave** (music) 
 
 A distance of 12 semitones between two notes. In **Hertz**, the ratio of
 an octave is 2:1. For example, the note 'A' above the middle C has a
 frequency of 440 Hz. The note 'A' one octave above is 880 Hz, and one
-octave below is 220 Hz. \
+octave below is 220 Hz. 
 
 **Ogg Vorbis**
 
-An open source lossy, size-compressed sound file format. \
+An open source lossy, size-compressed sound file format. 
 
 **Panning**
 
-Panning is the location of sounds in the **Stereo Field**. \
+Panning is the location of sounds in the **Stereo Field**. 
 
 **Parametric Equalizer**
 
 The Parametric Equalizer is the most versatile type of**EQ** used for
 **Mixing** because of its extensive control over all the parameters of
-filtering. \
+filtering. 
 
 **Peaks**
 
 Peaks are a graphical representation of the maximum **Levels** of a
-**Region**. \
+**Region**. 
 
 **Peak Meters**
 
 Peak Meters are a running representation of the maximum Levels of a
 Region, and are located next to the Fader in the Mixer Window, and also
-in the Track Mixer, of each Track. \
+in the Track Mixer, of each Track. 
 
 **Pitch**
 
@@ -678,7 +688,7 @@ notes) is half the frequency.
 **Playhead**
 
 In Ardour, the Playhead is the red line that moves in time (i.e., left
-to right) to indicate the current playback position. \
+to right) to indicate the current playback position. 
 
 **Plugin**
 
@@ -697,7 +707,7 @@ A free and open source set of **audio drivers**for Linux and Mac OS X.
 In the Mixer Strip, the post-fader area is the black space below the
 gain slider, to which plugins or sends can be added. The input of these
 plugins and sends will be the signal *after* any manual or automated
-gain change (thus "post-fader"). \
+gain change (thus "post-fader"). 
 
 **Pre-Fader** (Plugin or Send)
 
@@ -737,7 +747,7 @@ track does not remove the audio file from the disk.
 **Region List**
 
 The region list is located at the right hand side of the Editor Window
-and it shows all the regions associated with the session. \
+and it shows all the regions associated with the session. 
 
 **Reverberation**
 
@@ -748,7 +758,7 @@ reverberation, or reverb, is created when a sound is produced in an
 enclosed space causing a large number of echoes to build up and then
 slowly decay as the sound is absorbed by the walls and air. Digital
 reverberation can be added to a sound in Ardour through the use of
-plugins. \
+plugins. 
 
 **Right Click** (mouse)
 
@@ -766,7 +776,7 @@ a Bus).
 Rulers are the thin horizontal bars that display the time line, helping
 to see when exactly a region or sound starts or stops. Also displayed
 with the rulers are the meter and tempo markers, the location markers,
-the range markers and the loop/punch ranges. \
+the range markers and the loop/punch ranges. 
 
 **Sample** (data)
 
@@ -778,7 +788,7 @@ determines the **dynamic range** that is possible to record and
 playback. Common bit depths are 16 (for CD audio), 24 (for studio
 recording and DVDs) or 32 (for sounds inside the computer).
 
-**Sample** (music) \
+**Sample** (music) 
 
 In electronic music, the word sample can mean any portion of sound
 extracted from an existing piece of music to be reused in a new
@@ -856,7 +866,7 @@ Saving a snapshot in Ardour is similar to saving the session to a new
 file to avoid overwriting the original session file. A snapshot contains
 the current state of your work, while sharing all the audio and data
 files of the Session. If you were trying to find a "Save As" function in
-Ardour, saving a snapshot is probably what you are looking for. \
+Ardour, saving a snapshot is probably what you are looking for. 
 
 **Solo**
 
@@ -867,7 +877,7 @@ can be used to un-solo all soloed tracks at once.
 
 **Spectrum**
 
-The representation of a signal in terms of its frequency components. \
+The representation of a signal in terms of its frequency components. 
 
 **Stereo**
 
@@ -878,7 +888,7 @@ outputs, in order to record and playback stereo files.
 **Stereo Field**
 
 Stereo field is the perception of spatial location of sounds based on a
-sound reproduction system of 2 channels (Left and Right). \
+sound reproduction system of 2 channels (Left and Right). 
 
 **Take**(recording)
 
@@ -886,13 +896,13 @@ A sequence of sound recorded continuously at one time.
 
 **Tape Mode**
 
-****See **Track Mode**. \
+****See **Track Mode**. 
 
 **Tempo**(music)
 
 The rate at which beats occur. Precise Tempo indications are measured in
 **bpm** (beats per minute), although subjective indications are also
-common in scores (Allegro, Adagio, Very Fast, etc). \
+common in scores (Allegro, Adagio, Very Fast, etc). 
 
 **Terminal**
 
@@ -900,7 +910,7 @@ A "terminal" is the text-based interface that allows to operate a
 computer by typing commands into it. Most computer users today rely
 solely on a graphical interface to control their systems. Both Mac OS X
 and Linux though, include a terminal which may make some tasks easier
-for some users. \
+for some users. 
 
 **Timecode**
 
@@ -908,7 +918,7 @@ A time code is a sequence of numeric codes generated at regular
 intervals by a timing system. The SMPTE family of timecodes is almost
 universally used in film, video and audio production.
 
-**Time Signature** (music) \
+**Time Signature** (music) 
 
 A sign placed at the start of a piece of music (after the clef and key
 signature) or during the course of it, indicating the meter of the
@@ -920,7 +930,7 @@ A Track is the place to where you can drag a **Region** from your
 **Region List****** and where you can record sounds coming from an
 outside source. The Mixer Strip vertically represents the signal flow of
 a track, whereas the Main Canvas horizontally displays time-based
-information for each track. \
+information for each track. 
 
 **Track Mode**
 
@@ -929,11 +939,11 @@ Mode**. Normal Mode creates a new Region for each Recording **Take**,
 while **Tape Mode** destructively records--in other words the previous
 Take of a Track is eliminated with each new Take.
 
-**Transport \
+**Transport 
 **
 
 The buttons located on the upper left corner of the Editor Window, with
-controls such as Rewind, Play, Stop. \
+controls such as Rewind, Play, Stop. 
 
 **Treble**(frequencies)
 
@@ -942,13 +952,13 @@ sound.
 
 **VST (Virtual Studio Technology)**
 
-[](http://en.wikipedia.org/wiki/Steinberg "Steinberg")VST is an
+[Steinberg](http://en.wikipedia.org/wiki/Steinberg)VST is an
 interface for integrating software audio synthesizer and effect plugins
 with audio editors and digital workstations such as Ardour. VST and
 similar technologies use digital signal processing to simulate
 traditional recording studio hardware with software. Thousands of
 plugins exist, both commercial and freeware. VST was created by
-Steinberg. \
+Steinberg. 
 
 **WAV**
 
@@ -963,5 +973,10 @@ inside the colored rectangles representing Regions in the Main Canvas.
 
 **Word length**
 
-See **Bit Depth**. \
+See **Bit Depth**. 
+
+**Appendices:**
+[FURTHER HELP](../further-help)   ||
+[LINKS](../links)   ||
+[CREDITS](../credits)
 
