Add comments:false to all front matters

--- a/_posts/2014-04-27-glossary.md
+++ b/_posts/2014-04-27-glossary.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Glossary"
 description:
-modified: 
+comments: false 
 tags: [07 APPENDICES]
 image:
   feature: abstract-3.jpg
