--- a/_posts/2014-04-23-credits.md
+++ b/_posts/2014-04-23-credits.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Credits"
 description:
-modified: 
+comments: false 
 tags: [07 APPENDICES]
 image:
   feature: abstract-3.jpg
