--- a/_posts/2014-04-27-glossary.md
+++ b/_posts/2014-04-27-glossary.md
@@ -5,9 +5,9 @@ description:
 comments: false 
 tags: [07 APPENDICES]
 image:
-  feature: abstract-3.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  feature: Ardour3_Empty_Session_Transparent.png
+  credit:  
+  creditlink:  
 ---
 
 This glossary offers brief definitions for many or the terms used throuhout the Ardour3 FLOSS Tutorial.
