--- a/_posts/2014-07-25-panning.md
+++ b/_posts/2014-07-25-panning.md
@@ -5,9 +5,9 @@ description:
 comments: false 
 tags: [04 MIXING SESSIONS]
 image:
-  feature: abstract-3.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  feature: Ardour3_Empty_Session_Transparent.png
+  credit:  
+  creditlink:  
 ---
 
 Panning helps to establish a **Stereo Field**, a relative space between the speakers in which to
