--- a/_posts/2014-07-19-dynamics.md
+++ b/_posts/2014-07-19-dynamics.md
@@ -5,9 +5,9 @@ description:
 comments: false 
 tags: [04 MIXING SESSIONS]
 image:
-  feature: abstract-3.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  feature: Ardour3_Empty_Session_Transparent.png
+  credit:  
+  creditlink:  
 ---
 
 One of the problems you may encounter in a Mix is that the loud parts
