--- a/_posts/2014-07-19-dynamics.md
+++ b/_posts/2014-07-19-dynamics.md
@@ -39,7 +39,7 @@ ahead" in the signal by a few milliseconds, and when it sees that the
 signal is about to go over the limit you have set, it automatically
 turns the Levels down.
 
-![limiter](../images/Ardour3_Limiter_Fast_Lookahead.png)
+![limiter]({{ site.url }}/images/Ardour3_Limiter_Fast_Lookahead.png)
 
 The "*Input Gain (dB)*" slider determines how much the Levels are
 increased before they reach the Limiter, and the "*Attenuation (dB)*"
@@ -70,11 +70,11 @@ sets the Level at which the Compressor will start to act, and the
 the sound. The "*Attack*" and "*Decay*" parameters control how quickly
 the Compressor affects the sound.
 
-![simple compressor](../images/Ardour3_Compressor_Simple.png)
+![simple compressor]({{ site.url }}/images/Ardour3_Compressor_Simple.png)
 
 A more complex Compressor, the "*SC1 Compressor*" Plugin, is show below.
 
-![sc1 compressor](../images/Ardour3_Compressor_SC1.png)
+![sc1 compressor]({{ site.url }}/images/Ardour3_Compressor_SC1.png)
 
 It has three main buttons:
 
@@ -104,7 +104,7 @@ similar.
 
 Below is a screenshot of a similar Compressor from the [Calf Plugins Package](http://calf.sourceforge.net/plugins.html):
 
-![sc1 compressor](../images/Ardour3_Compressor_Calf.png)
+![sc1 compressor]({{ site.url }}/images/Ardour3_Compressor_Calf.png)
 
 ## Gating
 
@@ -121,14 +121,14 @@ Here, the "*Hard Gate*" Plugin displays a single control
 parameter, the "*Threshold*" at which the Gate will open and let the
 signal through.
 
-![gate](../images/Ardour3_Hard_Gate_Plugin.png)
+![gate]({{ site.url }}/images/Ardour3_Hard_Gate_Plugin.png)
 
 Other kinds of Gates, such as the Calf Gate Plugin, are
 more complex. They have independent control over how quickly the Gate
 opens (the "*Attack*") and closes (the "*Release*"), as well as other
 parameters quite similar to those described for the SC Compressor above.
 
-![gate2](../images/Ardour3_Gate_Calf.png)
+![gate2]({{ site.url }}/images/Ardour3_Gate_Calf.png)
 
 ## Continuing
 
